--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,9 +16,12 @@
     "@angular/compiler": "~11.0.9",
     "@angular/core": "~11.0.9",
     "@angular/forms": "~11.0.9",
+    "@angular/localize": "~11.0.9",
     "@angular/platform-browser": "~11.0.9",
     "@angular/platform-browser-dynamic": "~11.0.9",
     "@angular/router": "~11.0.9",
+    "@ng-bootstrap/ng-bootstrap": "^8.0.2",
+    "bootstrap": "^4.5.0",
     "ng-zorro-antd": "^11.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
