--- a/scrum-poker-backend/package.json
+++ b/scrum-poker-backend/package.json
@@ -2,7 +2,7 @@
     "name": "scrumPokerBackend",
     "version": "0.0.0",
     "scripts": {
-        "start": "node app.js"
+        "start": "npm install && node app.js"
     },
     "private": true,
     "dependencies": {
