--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~11.0.9",
     "@hochdreih/ngx-socket-io-3": "^2021.1.1",
     "@ng-bootstrap/ng-bootstrap": "^8.0.2",
+    "@swimlane/ngx-charts": "^17.0.0",
     "bootstrap": "^4.5.0",
     "ng-zorro-antd": "^11.0.1",
     "rxjs": "~6.6.0",
