--- a/scrum-poker-backend/package.json
+++ b/scrum-poker-backend/package.json
@@ -7,7 +7,8 @@
     "private": true,
     "dependencies": {
         "express": "^4.17.1",
-        "socket.io": "^3.1.0"
+        "socket.io": "^3.1.0",
+        "uuid": "^8.3.2"
     },
     "devDependencies": {}
 }
